# azure-search-openai-demo

./: pyproject.toml
.github/workflows/: main_holxai-dev-poc1.yml  nightly-jobs.yaml
