[tool.ruff]
target-version = "py38"
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend", "scripts"]

[tool.ruff.isort]
known-local-folder = ["scripts"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["app/backend", "scripts"]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "holxai-dev-poc1"
version = "0.1.0"
description = "A brief description of your app"
authors = ["Jaswanth <jassureddy5@gmailcom>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.mypy]
check_untyped_defs = true
python_version = 3.10

[[tool.mypy.overrides]]
module = [
    "msal.*"
]
ignore_missing_imports = true
